/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Rey Ruiz
 */
package ex43;

public class Main {

    public static void main(String[] args){
        Website.generate();
    }
}
